@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Main {
{static} main(args:String[])
}

class PointOfSale {
- idLastSale : int
- catalogFileName : String
+ makeNewSale() : int
+ addLineItemToSale(idSale : int, \n\tprodName : String, qty : int)
+ printReceiptOfSale(saleId : int)
+ payOneSale(saleId : int, amount : double)
+ printChangeOfSale(saleId : int)
- searchSaleById(int id) : Sale
}

class ProductCatalog {
+ ProductCatalog(fileName : String)
+ searchByName(name : String) : ProductSpecification
- addProductSpecification(name : String, price : double)
}

note left of ProductCatalog::ProductCatalog {
text file with
Coca-cola 1.20
Nestea    1.50
Moritz    1.90
...
}

class ProductSpecification {
- price : double
- name : String
+ incrementQuantity(qty : int)
}

class Sale {
- id : int
- dateTime : LocalDateTime
+ Sale(id : int)
+ addLineItem(prodSpec : ProductSpecification, \n\tqty : int)
+ printReceipt()
+ pay(amount : double) : double
+ printChange()
- total() : double
}

class PaymentInCash {
- amount : double
+ PaymentInCash(amount : double)
+ change(totalSale : double) : double
}

class SaleLineItem {
- quantity : int
+ incrementQuantity()
+ subtotal() : double
+ print()
}

PointOfSale o--> "*" Sale : sales
Sale *--> "*" SaleLineItem : saleLineItems
SaleLineItem --> "1" ProductSpecification : productSpecification
PointOfSale --> "1" ProductCatalog : productCatalog
ProductCatalog o--> " * " ProductSpecification : productSpecifications
Sale ---> "1" PaymentInCash
@enduml